--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -32,3 +32,14 @@ img {
   max-width: 100%;
   height: auto;
 }
+.iziToast>.iziToast-close {
+  background: url(../img/x.png) no-repeat 50% 50% !important;
+}
+.iziToast>.iziToast-body .iziToast-message,
+.iziToast>.iziToast-body .iziToast-title {
+  font-family: "Montserrat", sans-serif !important;
+  font-weight: 400 !important;
+    font-size: 16px !important;
+    line-height: 150% !important;
+    letter-spacing: 0.03em !important;
+}
